--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,6 +8,11 @@
             content="iChat, A secure and fast messaging app"
         />
         <title>iChat</title>
+        <link
+            rel="shortcut icon"
+            href="https://img.icons8.com/external-justicon-flat-justicon/64/000000/external-chat-notifications-justicon-flat-justicon.png"
+            type="image/x-icon"
+        />
         <!-- CSS only -->
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
